overflow issues

--- a/style.css
+++ b/style.css
@@ -30,13 +30,19 @@ body * {
 }
 body {
 	opacity: 0;
-	transition: opacity 200ms ease-in-out 400ms;
-	-o-transition: opacity 200ms ease-in-out 400ms;
-	-moz-transition: opacity 200ms ease-in-out 400ms;
-	-webkit-transition: opacity 200ms ease-in-out 400ms;
+	transition: opacity 400ms ease-in-out 400ms;
+	-o-transition: opacity 400ms ease-in-out 400ms;
+	-moz-transition: opacity 400ms ease-in-out 400ms;
+	-webkit-transition: opacity 400ms ease-in-out 400ms;
 }
 body.init  {
 	opacity: 1;
+}
+body.completed {
+	overflow-y: scroll; 
+}
+main {
+	position: relative;
 }
 section {
 	position: relative;
@@ -45,7 +51,7 @@ section {
 }
 .logoWrapper {
 	z-index: 200;
-	position: fixed;
+	position: absolute;
 	top:0;
 	left: 0;
 	width: 100%;
@@ -101,6 +107,19 @@ section {
 .mobile #authorize {
 	display: none;
 }
+#authorize {
+	height: calc(100% - 120px);
+	height: -moz-calc(100% - 120px);
+	height: -webkit-calc(100% - 120px);
+	padding-top: 120px;
+}
+.completed #authorize {
+	
+	transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+	-o-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+	-moz-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+	-webkit-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+}
 #authorize .container {
 	display: table-cell;
 	vertical-align: middle;
@@ -122,13 +141,15 @@ section {
 	-moz-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
 	-webkit-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
 }
-#authorize.completed .container #complete {
-	height: 500px;
+
+.completed #authorize .container #complete {
 	opacity: 1;
+	height: auto;
 }
 #authorize .container #complete .inner {
 	width: 720px;
 	height: auto;
+	padding-bottom: 40px;
 	transition: transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
 	-o-transition: -o-transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
 	-moz-transition: -moz-transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
